unpackaged/main/default/objects/Segment__c/Segment__c.object-meta.xml
<CustomObject>
    <description>The segment of the account/lead. Contains the secondary and primary segment names.</description>
    <label>Segment</label>
    <nameField>
        <label>Secondary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>