unpackaged/main/default/objects/Segment__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <description>The primary segment.</description>
    <label>Primary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>