unpackaged/main/default/objects/Segment__c/fields/Segment_Group__c.field-meta.xml
<CustomField>
    <fullName>Segment_Group__c</fullName>
    <description>The group the segment belongs to</description>
    <label>Segment Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>