unpackaged/main/default/objects/Segment__c/fields/Segment_Growth_Target__c.field-meta.xml
<CustomField>
    <fullName>Segment_Growth_Target__c</fullName>
    <description>The growth target of the segment</description>
    <label>Segment Growth Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>