unpackaged/main/default/objects/Segment__c/fields/Segment_Id__c.field-meta.xml
<CustomField>
    <fullName>Segment_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The External ID of the segment.</description>
    <externalId>true</externalId>
    <label>Segment Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>