unpackaged/main/default/objects/Segment__c/listViews/Admin.listView-meta.xml
<ListView>
    <fullName>Admin</fullName>
    <columns>NAME</columns>
    <columns>Primary__c</columns>
    <columns>Status__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary__c</field>
        <operation>equals</operation>
        <value>Trade</value>
    </filters>
    <label>Admin</label>
    <sharedTo>
        <group>System_Administrator</group>
    </sharedTo>
</ListView>