unpackaged/main/default/objects/Segment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Primary__c</columns>
    <columns>Segment_Group__c</columns>
    <columns>Segment_Growth_Target__c</columns>
    <columns>Country__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>